k8s/base/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
spec:
  ports:
  - port: 8080
    name: http
  type: ClusterIP
  selector:
    app: sample-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
spec:
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
    spec:
      containers:
      - name: sample-api
        image: localhost:32000/dev/sample-api-svc
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
