k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: sample-api
              servicePort: 8080
      # host parameter is required for use default haproxy 
      # ingress controller in opneshift
      # host: sample-api-default.apps-crc.testing
